--- a/Pat.Sender.DataProtectionEncryption/Pat.Sender.DataProtectionEncryption.csproj
+++ b/Pat.Sender.DataProtectionEncryption/Pat.Sender.DataProtectionEncryption.csproj
@@ -2,12 +2,20 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
     <PackageId>Pat.Sender.DataProtectionEncryption</PackageId>
-    <Description>Purplebricks support for sending encrypted messages</Description>
+    <Description></Description>
     <Company>Purplebricks</Company>
     <Version>0.0.0</Version>
+    <Summary>Purplebricks support for sending encrypted messages</Summary>
+    <Description>Purplebricks support for sending encrypted messages</Description>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PackageIconUrl>https://pbonlineassets.azureedge.net/web-images/favicons/favicon-96x96.png</PackageIconUrl>
+    <PackageProjectUrl>http://purplebricks.io/pat/</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/purplebricks/Pat.Sender.DataProtectionEncryption/blob/master/LICENSE</PackageLicenseUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/purplebricks/Pat.Sender.DataProtectionEncryption</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Pat.DataProtection" Version="1.0.2" />
-    <PackageReference Include="Pat.Sender" Version="2.0.2" />
+    <PackageReference Include="Pat.DataProtection" Version="1.0.3" />
+    <PackageReference Include="Pat.Sender" Version="2.0.10" />
   </ItemGroup>
 </Project>
