--- a/Pat.Sender.DataProtectionEncryption/Pat.Sender.DataProtectionEncryption.csproj
+++ b/Pat.Sender.DataProtectionEncryption/Pat.Sender.DataProtectionEncryption.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net452;net471;</TargetFrameworks>
     <PackageId>Pat.Sender.DataProtectionEncryption</PackageId>
     <Description></Description>
     <Company>Purplebricks</Company>
@@ -15,7 +15,7 @@
     <RepositoryUrl>https://github.com/purplebricks/Pat.Sender.DataProtectionEncryption</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Pat.DataProtection" Version="1.0.5" />
-    <PackageReference Include="Pat.Sender" Version="2.0.11" />
+    <PackageReference Include="Pat.DataProtection" Version="1.0.9" />
+    <PackageReference Include="Pat.Sender" Version="4.0.18" />
   </ItemGroup>
 </Project>
